@@ -31,6 +31,12 @@
    - markus@cvs.openbsd.org 2001/10/08 16:15:47
      [sshconnect.c]
      use correct family for -b option
+   - markus@cvs.openbsd.org 2001/10/08 19:05:05
+     [ssh.c sshconnect.c sshconnect.h ssh-keyscan.c]
+     some more IPv4or6 cleanup
+   - markus@cvs.openbsd.org 2001/10/09 10:12:08
+     [session.c]
+     chdir $HOME after krb_afslog(); from bbense@networking.stanford.edu
 
 20011007
  - (bal) ssh-copy-id corrected permissions for .ssh/ and authorized_keys.
@@ -6676,4 +6682,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1594 2001/10/10 05:04:41 djm Exp $
+$Id: ChangeLog,v 1.1595 2001/10/10 05:07:44 djm Exp $
